--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cache-
       - run: npm ci
-      - run: npm run --prefix infra --frozen-lockfile
+      - run: npm --prefix infra ci
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
