--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,6 +16,7 @@ jobs:
           key: ${{ runner.os }}-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-cache-
+            ${{ runner.os }}-
       - run: npm ci
       - run: npm run build
 
@@ -32,6 +33,7 @@ jobs:
           key: ${{ runner.os }}-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-cache-
+            ${{ runner.os }}-
       - run: npm ci
       - run: npm run test
 
@@ -48,6 +50,7 @@ jobs:
           key: ${{ runner.os }}-cache-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-cache-
+            ${{ runner.os }}-
       - run: mkdir build
       - run: npm --prefix infra ci
       - run: npm run --prefix infra test
